--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url('./images/tumblr_c2e8441ba9e6c32473da1b447b369b55_3f7ab16a_500.webp') no-repeat center center fixed; /* GIF de fundo */
+    background: url('/images/tumblr_c2e8441ba9e6c32473da1b447b369b55_3f7ab16a_500.webp') no-repeat center center fixed; /* GIF de fundo */
     background-size: cover;
     padding: 20px;
     box-sizing: border-box;
